Add example lang Optimize dist

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "help": "yarn run build && electron . --help",
     "examples": "yarn run build && electron . ./examples/*",
     "guide": "markdown-pdf -m '{\"html\":true,\"breaks\":true}' -s GUIDE.css GUIDE.md",
-    "dist": "yarn run build && electron-builder -wml",
+    "dist": "yarn run build && electron-builder -wml && yarn run copy:externals",
+    "copy:externals": "zip out/UniversalRecipeManager-it-translation.zip examples/it.urmlang; cp GUIDE.pdf out/UniversalRecipeManager-guide.pdf",
     "dist:win": "yarn run build && electron-builder -w",
     "dist:mac": "yarn run build && electron-builder -m",
     "dist:lin": "yarn run build && electron-builder -l",
