Add features on first run or update Update GUIDE.* Update it translation Add CLI command for version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "uni-recipe-man",
-  "version": "1.0.4",
+  "version": "1.0.5",
+  "productName": "UniversalRecipeManager",
   "main": "main.js",
   "description": "Universal recipe manager",
   "repository": {
